[package]
name = "flash-compute"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_compute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "~1.16.18"
anchor-spl = "0.28.0"
pyth-sdk-solana = "0.10.1"
pyth-solana-receiver-sdk = "0.1.0"
flash-read = { path = "../flash-read", features = ["cpi"]}

